# AL_JC_PP_VG_fraudes_en_seguros_veh-culares

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
.streamlit/: config.toml
models/: Logistic_Regression.pkl  Logistic_Regression_plus_SMOTE.pkl  XGBoost.pkl  model_metadata.pkl
notebooks/: app.py  fraud_clean.csv  fraud_detection_analysis.ipynb
notebooks/models/: Logistic_Regression.pkl  Logistic_plus_SMOTE.pkl  XGBoost.pkl
src/: __init__.py  config.py  data_loader.py  metrics.py  plotting.py  prediction.py
src/fraud_detection/: config.py  mappings.py
src/fraud_detection/pages/: performance.py
src/pages/: __init__.py  eda.py  home.py  prediction.py
tests/: test_fraud_detection.py
