[project]
name = "fraud-detection"
version = "0.1.0"
description = "Detección de fraude en seguros vehiculares — Universidad de Medellín"
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
    { name = "Andres Felipe Londoño Ocampo" },
    { name = "Jhonatan Caro Atehortúa" },
    { name = "Paulina Perez Ramirez" },
    { name = "Victor Manuel Galeano Alvarez" },
]
license = { text = "MIT" }
keywords = ["machine-learning", "fraud-detection", "insurance", "xgboost", "streamlit"]

dependencies = [
    # Core científico
    "pandas>=2.0,<3.0",
    "numpy>=1.24,<2.0",
    "scikit-learn>=1.3,<2.0",
    # Modelado
    "xgboost>=2.0",
    "imbalanced-learn>=0.11",
    # Visualización e interpretabilidad
    "plotly>=5.17",
    "shap>=0.43",
    # Aplicación web
    "streamlit>=1.28",
    # Persistencia
    "joblib>=1.3",
    # Notebooks
    "jupyter>=1.0",
    "nbformat>=5.9",
    "ipykernel>=6.25",
    # Configuración
    "python-dotenv>=1.0",
    # Lectura de Excel (por si se requiere)
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1.0",
    "mypy>=1.5",
]

[project.urls]
Repository = "https://github.com/<tu-usuario>/fraud-detection"

# --------------------------------------------------------------
# Configuración del paquete
# --------------------------------------------------------------
[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["fraud_detection*"]

# --------------------------------------------------------------
# Configuración de pytest
# --------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]

# --------------------------------------------------------------
# Configuración de ruff (linter)
# --------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]
